--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.6)
-project(SPAM)
+project(Images)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-set(SOURCE_FILES main.cpp Common/image-operation.h Common/gui.h Common/tools.h Projects/1/1/operation.cpp forward-declaration.h)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -lboost_filesystem")
+set(SOURCE_FILES main.cpp common/images.hpp common/gui.hpp operations/1/1/operation.cpp forward-declaration.hpp common/common.hpp)
 
 find_package(PNG REQUIRED)
 include_directories(${PNG_INCLUDE_DIR})
@@ -12,11 +12,15 @@ include_directories(${PNG_INCLUDE_DIR})
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.60.0 REQUIRED)
+find_package(Boost 1.58.0 REQUIRED)
 
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
-    add_executable(SPAM ${SOURCE_FILES})
-    target_link_libraries(SPAM ${PNG_LIBRARY})
-    target_link_libraries(SPAM ${Boost_LIBRARIES})
+    add_executable(Images ${SOURCE_FILES})
+    file(COPY graphics DESTINATION Storage)
+    file(COPY documentation DESTINATION Storage)
+    file(COPY graphics DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+    file(COPY documentation DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+    target_link_libraries(Images ${PNG_LIBRARY})
+    target_link_libraries(Images ${Boost_LIBRARIES})
 endif()
