--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(Images)
+project(Imgus)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -lboost_filesystem")
@@ -21,8 +21,8 @@ if(Boost_FOUND AND PNG_FOUND AND Qt5Widgets_FOUND)
     include_directories(${PNG_INCLUDE_DIR})
     include_directories(${Boost_INCLUDE_DIRS})
     include_directories(${Qt5Widgets_INCLUDE_DIRS})
-    add_executable(Images ${SOURCE_FILES})
-    target_link_libraries(Images ${PNG_LIBRARY})
-    target_link_libraries(Images ${Boost_LIBRARIES})
-    target_link_libraries(Images ${Qt5Widgets_LIBRARIES})
+    add_executable(Imgus ${SOURCE_FILES})
+    target_link_libraries(Imgus ${PNG_LIBRARY})
+    target_link_libraries(Imgus ${Boost_LIBRARIES})
+    target_link_libraries(Imgus ${Qt5Widgets_LIBRARIES})
 endif()
